fix: wrap page title in container

--- a/src/pages/AboutUs/index.scss
+++ b/src/pages/AboutUs/index.scss
@@ -3,7 +3,10 @@
 
 .about-team__title {
   margin-top: 36px;
-  margin-left: 36px;
+}
+
+.title-container {
+  max-width: 500px;
 }
 
 .card-photo {
